<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/mSelDate"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/mSelDate"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/mReload"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/mReload"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mLockLoad"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/mLockLoad" />

    <item
        android:id="@+id/mExit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/mExit" />

    <item
        android:id="@+id/mLogin"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/mLogin" />

    <item
        android:id="@+id/mLogout"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/mLogout"
        android:visible="false"/>

    <item
        android:id="@+id/mAddCat"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/mAddCat"
        android:visible="false"/>



</menu>